# yara-compendium

./: Dockerfile  LICENSE  README.md  pyproject.toml  requirements.txt  requirements_test.txt  tox.ini  yara_compendium.py
compendium/: config.py  main.py  objects.py
etc/: config.yml  disable.conf  modify.conf
test/: test_alterations.py  test_main.py  test_rulesets.py
